--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,18 +33,20 @@ dependencies:
   flutter:
     sdk: flutter
   #shared_preferences: ^0.5.12
-  provider: ^4.1.2
+  provider: ^6.0.3
   image_picker: ^0.8.4+4
-
+  image_cropper: ^1.4.1
+  flutter_native_image: ^0.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg_provider: ^0.1.8 #to use svg images
-  google_fonts: ^2.3.0 #to import google fonts and text theme
-  flutter_secure_storage: ^3.3.5
-  fluttertoast: ^7.1.6
-  checkbox_formfield: ^0.1.0+3
+  flutter_svg_provider: ^1.0.3 #to use svg images
+  google_fonts: ^3.0.1 #to import google fonts and text theme
+  flutter_secure_storage: ^5.1.0
+  fluttertoast: ^8.0.9
+#  checkbox_formfield: ^0.1.0+3
+  checkbox_formfield: ^0.2.0
   camera: ^0.9.4
   camera_web: ^0.2.1+1
   #camera: ^0.10.0
